--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
 
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>RecipeVeg — Vegetarian Recipes & Benefits</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container">
+      <h1>RecipeVeg</h1>
+      <p class="subtitle">Vegetarian recipes and their benefits</p>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="controls">
+      <input id="search" type="search" placeholder="Search recipes..." aria-label="Search recipes" />
+      <select id="tagFilter" aria-label="Filter by tag">
+        <option value="">All tags</option>
+      </select>
+    </section>
+
+    <section id="recipes" class="grid" aria-live="polite">
+      <!-- Cards injected by JavaScript -->
+    </section>
+  </main>
+
+  <!-- Benefits modal -->
+  <div id="modal" class="modal" role="dialog" aria-modal="true" aria-hidden="true">
+    <div class="modal-content" role="document">
+      <button id="modalClose" class="modal-close" aria-label="Close benefits">&times;</button>
+      <h2 id="modalTitle">Benefits</h2>
+      <ul id="modalList"></ul>
+    </div>
+  </div>
+
+  <footer class="site-footer container">
+    <small>RecipeVeg — Vegetarian recipes only • Built with HTML/CSS/JS</small>
+  </footer>
+
+  <script src="scripts.js"></script>
+</body>
+</html>
